# marketplace_apis

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
docs/: index.md
marketplace_apis/: __init__.py
marketplace_apis/common/: base.py  currency.py  enums.py  marketplaces.py  requester.py  utils.py
marketplace_apis/offers/product/: product.py
marketplace_apis/ozon/: base.py  endpoints.py  seller_api.py  seller_api_requester.py  utils.py
marketplace_apis/ozon/common/: abc_methods.py  enums.py
marketplace_apis/ozon/delivery_method/: delivery_method.py  enums.py  methods.py  methods_types.py
marketplace_apis/ozon/posting/: addressee.py  analytics_data.py  barcodes.py  cancellation.py  courier.py  customer.py  delivery_method.py  enums.py  financial_data.py  label.py  methods.py  methods_types.py  posting.py  posting_product.py  product_exemplars.py  prr_option.py  requirements.py  services.py  ship.py
marketplace_apis/ozon/product/: attribute.py  commision.py  enums.py  file.py  methods.py  methods_types.py  price_index.py  product.py  source.py  status.py  stock.py  visibility_details.py
marketplace_apis/ozon/warehouse/: enums.py  first_mile.py  methods.py  warehouse.py
marketplace_apis/yandex/: base.py  endpoints.py  market_api.py  market_api_requester.py
marketplace_apis/yandex/campaign/: campaign.py  enums.py  methods.py  settings.py  settings_delivery.py  settings_local_region.py  settings_schedule.py  settings_time_period.py
marketplace_apis/yandex/campaigns/: business.py  campaign.py  enums.py  methods.py  settings.py  settings_delivery.py  settings_local_region.py  settings_schedule.py
marketplace_apis/yandex/common/: abc_methods.py  age.py  enums.py  region.py  time_period.py
marketplace_apis/yandex/mapping/: mapping.py
marketplace_apis/yandex/oauth/: methods.py
marketplace_apis/yandex/offer/: campaign_status.py  condition.py  enums.py  offer.py  param.py  price.py  price_with_discount.py  selling_program.py  weight_dimensions.py
reference/SUMMARY/: index.html
reference/common/: index.html
reference/ozon/: index.html
reference/yandex/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
tests/common/: test_requester.py
tests/ozon/: conftest.py  test_delivery_method.py  test_posting.py  test_product.py  test_warehouse.py
tests/yandex/: conftest.py  test_campaign.py  test_offer_mapping.py  test_order.py  test_warehouse.py
(+146 files in other folders)
