[project]
requires-python = ">=3.12"
name = "marketplace_apis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Anatoly Raev", email = "cralixraev@gmail.com" },
]
dynamic = ["version", "description"]
dependencies = [
    "httpx",
    "httpx_ratelimiter",
    "mashumaro"
]

[build-system]
requires = ["flit_core>=3.9.0,<4"]
build-backend = "flit_core.buildapi"
