[project]
requires-python = ">=3.12"
name = "marketplace_apis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Anatoly Raev", email = "cralixraev@gmail.com" },
]
dynamic = ["version", "description"]
dependencies = [
    "httpx",
    "httpx_ratelimiter",
    "mashumaro"
]

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.ruff]
select = ["E", "F", "RUF", "PERF", "TRY", "PL", "PTH", "ARG", "SIM", "PIE", "C4",
    "B", "S", "UP", "C90", "A", "T20", "FURB"]
preview = true
ignore = ["RUF001", "RUF002", "PLR0913", "RUF003"]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"tests/*" = ["PLR6301", "S101"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["flit_core>=3.9.0,<4"]
build-backend = "flit_core.buildapi"
