[project]
requires-python = ">=3.12"
name = "marketplace_apis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Anatoly Raev", email = "cralixraev@gmail.com" },
]
dynamic = ["version", "description"]
dependencies = [
    "httpx",
    "mashumaro"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-minify-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-committers-plugin-2",
    "pymdown-extensions",
    "pygments",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index"
]
orjson = ["orjson"]

[tool.ruff]
select = ["E", "F", "RUF", "PERF", "TRY", "PL", "PTH", "ARG", "SIM", "PIE", "C4",
    "B", "S", "UP", "C90", "A", "T20", "FURB"]
preview = true
target-version = "py312"
ignore = ["RUF001", "RUF002", "PLR0913", "RUF003"]

[tool.ruff.lint.per-file-ignores]

"__init__.py" = ["E402"]
"tests/*" = ["PLR6301", "S101"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["flit_core>=3.9.0,<4"]
build-backend = "flit_core.buildapi"
